# uvapi

./: .gitignore  .gitmodules  AGENTS.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  VALIDATION_IMPLEMENTATION.md  docker-compose.yml  setup.sh  test_static_simple.cpp
config/: production-examples.yaml  prometheus.yml
docs/: 404.html  DSL_DESIGN.md  DSL_FEATURES_ASSESSMENT.md  DSL_USAGE.md  JSON_USAGE.md  MEMORY_OPTIMIZATION.md  PRODUCTION_READINESS.md  README.html  hashmap.json  index.html
docs/api/: framework.html  index.html  json.html  response-dsl.html
docs/assets/: guide_quick-start.md.0aD69ewW.js  guide_quick-start.md.0aD69ewW.lean.js  guide_quick-start.md.C84OMCXN.js  guide_quick-start.md.C84OMCXN.lean.js  guide_request-dsl.md.CPxjbySI.js  guide_request-dsl.md.CPxjbySI.lean.js  guide_routing.md.BM4JEQRC.js  guide_routing.md.BM4JEQRC.lean.js  guide_routing.md.CKDaiw3w.js  guide_routing.md.CKDaiw3w.lean.js  index.md.Cmrh-BLK.js  index.md.Cmrh-BLK.lean.js
docs/design/: architecture.html  dsl-design.html  index.html
docs/en/guide/: json-usage.html  quick-start.html  response-dsl.html
docs/examples/: index.html  response-dsl.html
docs/guide/: index.html  json-usage.html  quick-start.html  request-dsl.html  response-dsl.html  routing.html
docs/site/: README.md  index.md  package-lock.json  package.json
docs/site/.vitepress/: config.mjs
docs/site/api/: framework.md  index.md  json.md  response-dsl.md
docs/site/design/: architecture.md  dsl-design.md  index.md
docs/site/en/guide/: json-usage.md  quick-start.md  response-dsl.md
docs/site/examples/: index.md  response-dsl.md
docs/site/guide/: index.md  quick-start.md  request-dsl.md  response-dsl.md  routing.md
examples/: auth_server.cpp  benchmark_server.cpp  cache_usage_example.cpp  complete_api_example.cpp  crud_server.cpp  declarative_dsl_auto_parse.cpp  declarative_dsl_example.cpp  dsl_complete_example.cpp  dsl_example.cpp  json_usage_example.cpp  params_example.cpp  response_builder_external.cpp  schema_dsl_example.cpp  schema_example.cpp  schema_reuse_example.cpp  static_files_example.cpp  upload_example.cpp  uvhttp_middleware_example.cpp  validation_example.cpp
include/: array_support.h  builtin_types.h  declarative_dsl.h  dsl.h  framework.h  framework_http.h  framework_server.h  framework_types.h  health_check.h  metrics.h  middleware.h  model_types.h  multipart.h  object_pool.h  params_dsl.h  rate_limiter.h  response_cache.h  schema_dsl.h  string_builder.h  uvapi_allocator.h  uvhttp_middleware_adapter.h  uvhttp_middleware_simple.h  version.h
public/: index.html
public/js/: app.js
src/: framework_uvhttp.cpp  multipart.cpp
test/unit/: test_declarative_dsl.cpp  test_declarative_dsl_auto_parse.cpp  test_object_pool.cpp  test_param_value.cpp  test_response_builder.cpp  test_schema_dsl.cpp
